@@ -9,6 +9,7 @@
 - :select option allows column families to be identified using symbols
 - tests and groundwork for mutator flush_interval (asynchronous writes)
   - requires Hypertable 0.9.2.7
+- fix bug in with_thrift_client invocation
 - update tests to be compatible with Rails 2.3.4
 - update tests to be compatible with RSpec 1.2.8
 
